# calc_engine

./: CMakeLists.txt  README.md
calc_example/: CMakeLists.txt
calc_example/src/: main.cpp
calc_lib/: CMakeLists.txt
calc_lib/include/: BaseEngine.h  DividerEngine.h  IntStreamer.h  MultiplierEngine.h
calc_lib/src/: BaseEngine.cpp  DividerEngine.cpp  DividerEngine.h  IntStreamer.cpp  MultiplierEngine.cpp
docs/: Doxyfile
gtest/: CMakeLists.txt
gtest/include/: DividerEngineTest.h  EngineTest.h
gtest/src/: DividerEngineTest.cpp  EngineTest.cpp  main.cpp
